# nlsm-gr

./: .gitignore  CMakeLists.txt  README.md  nlsm.py  nlsm_simplified.param.toml
gencode/: solver_rhs_deriv_calc.cpp.inc  solver_rhs_deriv_memalloc.cpp.inc  solver_rhs_eqns.cpp.inc  solver_rhs_ko_deriv_calc.cpp.inc
lib/libxsmm/: CMakeLists.txt
scripts/: TeukolskyPyData.ipynb  create_par_files.py  mpl_helpers.py  parse_output_for_errors.py  test_1d_global.py
solver/: CMakeLists.txt  solver_main.cpp  solver_scaling.cpp
solver/include/: compact_derivs.h  dataUtils.h  debugger_tools.h  derivs.h  grDef.h  grUtils.h  grUtils.tcc  hadrhs.h  parameters.h  physcon.h  profile_params.h  rhs.h  rkSolver.h  solverCtx.h  solver_main.h  system_constraints.h
solver/src/: dataUtils.cpp  debugger_tools.cpp  derivs.cpp  grUtils.cpp  parameters.cpp  physcon.cpp  rhs.cpp  rkSolver.cpp  solverCtx.cpp  system_constraints.cpp
